src/objects/KS_Homologacion__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Relaciona las homologaciones con sus propietario (cliente) y sus productos que lo componen</description>
    <fields>
        <fullName>KS_Cliente__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Homologaciones</relationshipLabel>
        <relationshipName>Homologaciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_calculo_tarifa__c</fullName>
        <description>Fecha que indentifica la tarifa que se usará para el cálculo de la tarifa</description>
        <inlineHelpText>Fecha que indentifica la tarifa que se usará para el cálculo de la tarifa</inlineHelpText>
        <label>Fecha cálculo tarifa</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_caducidad__c</fullName>
        <label>Fecha de caducidad</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_de_la_homologacion__c</fullName>
        <label>Nombre de la Homologación</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_PVP_Tarifa__c</fullName>
        <label>PVP Tarifa</label>
        <summarizedField>KS_Componente__c.KS_Importe__c</summarizedField>
        <summaryForeignKey>KS_Componente__c.KS_homologacion__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_PVP_manual__c</fullName>
        <label>PVP manual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Homologaciones</relationshipLabel>
        <relationshipName>Homologaciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Homologación</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>H-{00000}</displayFormat>
        <label>Id Homologacion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Homologaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Control_Fecha_tarifa</fullName>
        <active>true</active>
        <description>Controla que la fecha de Tarifa no sea nunca superior a la actual</description>
        <errorConditionFormula>KS_Fecha_calculo_tarifa__c &lt;= TODAY()</errorConditionFormula>
        <errorMessage>La fecha de tarifa debe de ser igual o inferior al día de hoy</errorMessage>
    </validationRules>
</CustomObject>